<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="@dimen/spacing_normal">
	
	<RadioGroup
		android:id="@+id/filter_who"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/spacing_normal">
		
		<TextView
			android:id="@+id/header_who"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/spacing_small"
			android:text="@string/who"
			android:textAllCaps="true" />
		
		<android.support.v7.widget.AppCompatRadioButton
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/event_owner"
			android:buttonTint="@color/colorAccent"/>
		
		<android.support.v7.widget.AppCompatRadioButton
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/event_assignee" />
	</RadioGroup>
	
	<RadioGroup
		android:id="@+id/filter_event_status"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		
		<TextView
			android:id="@+id/header_status"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/spacing_small"
			android:text="@string/event_status"
			android:textAllCaps="true" />
		
		<android.support.v7.widget.AppCompatRadioButton
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/event_status_editable" />
		
		<android.support.v7.widget.AppCompatRadioButton
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/event_status_ready_to_play" />
		
		<android.support.v7.widget.AppCompatRadioButton
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/event_status_in_play" />
		
		<android.support.v7.widget.AppCompatRadioButton
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/event_status_evaluation" />
		
		<android.support.v7.widget.AppCompatRadioButton
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/event_status_finished" />
	</RadioGroup>

</LinearLayout>