<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.signup.SignupActivity">
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/spacing_normal"
		android:focusable="true"
		android:focusableInTouchMode="true"
		android:gravity="center_horizontal"
		android:orientation="vertical">
		
		<TextView
			style="@style/MessageTitle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/msg_give_info" />
		
		
		<ImageView
			android:id="@+id/profile_photo"
			android:layout_width="@dimen/profile_photo_size"
			android:layout_height="@dimen/profile_photo_size"
			android:layout_marginTop="@dimen/spacing_large"
			android:layout_marginBottom="@dimen/spacing_large"
			android:src="@drawable/user_placeholder" />
		
		
		<android.support.design.widget.TextInputLayout
			android:id="@+id/input_name"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/spacing_normal"
			android:hint="@string/hint_name"
			app:errorEnabled="true">
			
			<android.support.design.widget.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="text"
				android:lines="1" />
		</android.support.design.widget.TextInputLayout>
		
		
		<android.support.design.widget.TextInputLayout
			android:id="@+id/input_email"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/spacing_normal"
			android:hint="@string/hint_email"
			app:errorEnabled="true">
			
			<android.support.design.widget.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textEmailAddress"
				android:lines="1" />
		</android.support.design.widget.TextInputLayout>
		
		
		<android.support.design.widget.TextInputLayout
			android:id="@+id/input_password"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/spacing_normal"
			android:hint="@string/hint_password"
			app:errorEnabled="true">
			
			<android.support.design.widget.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textPassword" />
		</android.support.design.widget.TextInputLayout>
		
		
		<android.support.design.widget.TextInputLayout
			android:id="@+id/input_repeat_password"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/spacing_normal"
			android:hint="@string/hint_repeat_password"
			app:errorEnabled="true">
			
			<android.support.design.widget.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textPassword" />
		</android.support.design.widget.TextInputLayout>
		
		
		<Button
			android:id="@+id/btn_signup"
			style="@style/Button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_signup" />
	
	
	</LinearLayout>


</ScrollView>