<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:scrollbars="vertical"
		tools:context=".ui.login.LoginActivity"
		android:layout_margin="@dimen/spacing_normal">
	
	<TextView
			android:textAlignment="center"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textAllCaps="true"
			android:text="@string/welcome_message"
			android:layout_marginTop="16dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			android:id="@+id/textView4"/>
	
	<ImageView
			android:src="@mipmap/ic_launcher"
			android:layout_width="wrap_content"
			android:layout_height="72dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:id="@+id/imageView"
			android:layout_marginTop="16dp"
			app:layout_constraintTop_toBottomOf="@+id/textView4"/>
	
	<android.support.design.widget.TextInputLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:hint="@string/hint_email"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
			app:layout_constraintTop_toBottomOf="@+id/imageView"
			android:id="@+id/textInputLayout2"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent">
		
		<android.support.design.widget.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:lines="1"
				android:inputType="text"/>
	</android.support.design.widget.TextInputLayout>
	
	<android.support.design.widget.TextInputLayout
			android:layout_width="0dp"
			android:layout_height="56dp"
			android:hint="@string/hint_password"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:id="@+id/textInputLayout"
			app:layout_constraintBottom_toBottomOf="parent"
			android:layout_marginBottom="186dp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent">
		
		<android.support.design.widget.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textPassword"/>
	</android.support.design.widget.TextInputLayout>
	
	<Button
			android:text="@string/btn_login"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/btn_login"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintBottom_toTopOf="@+id/textView"
			android:layout_marginBottom="16dp"/>
	
	<Button
			android:text="@string/btn_facebook"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/btn_facebook"
			android:layout_marginBottom="16dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="25dp"
			app:layout_constraintEnd_toStartOf="@+id/btn_google"
			android:layout_marginEnd="16dp"
			app:layout_constraintHorizontal_bias="0.139"/>
	
	<Button
			android:text="@string/btn_google"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/btn_google"
			android:layout_marginBottom="16dp"
			app:layout_constraintBottom_toBottomOf="parent"
			android:layout_marginEnd="24dp"
			app:layout_constraintEnd_toEndOf="parent"/>
	
	<TextView
			android:text="@string/tv_no_account"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:id="@+id/textView"
			android:layout_marginEnd="6dp"
			android:textSize="@dimen/font_small"
			android:layout_marginBottom="12dp"
			app:layout_constraintBottom_toTopOf="@+id/textView3"
			app:layout_constraintHorizontal_bias="0.515"/>
	
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="13dp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:id="@+id/textView2"
			app:layout_constraintTop_toTopOf="@+id/textView3"
			android:layout_marginTop="13dp"
			android:layout_marginBottom="7dp"
			app:layout_constraintBottom_toTopOf="@+id/btn_facebook"/>
	
	<TextView
			android:text="@string/tv_forgotten_password"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:id="@+id/textView3"
			android:textSize="@dimen/font_small"
			app:layout_constraintHorizontal_bias="0.496"
			android:layout_marginBottom="20dp"
			app:layout_constraintBottom_toTopOf="@+id/btn_facebook"/>
	
	<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@mipmap/ic_launcher"
			tools:layout_editor_absoluteY="463dp"
			tools:layout_editor_absoluteX="141dp"/>

</android.support.constraint.ConstraintLayout>